--- a/pages/index.html
+++ b/pages/index.html
@@ -36,25 +36,25 @@
         <ul
           class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
-            <a href="/home/uki/Documents/modules/css_modules/Css final ass/pages/Home.html"
+            <a href="./index.html"
               class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
               aria-current="page">Home</a>
           </li>
           <li>
-            <a href="/home/uki/Documents/modules/css_modules/Css final ass/pages/About.html"
+            <a href="./About.html"
               class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
           </li>
           <li>
-            <a href="/home/uki/Documents/modules/css_modules/Css final ass/pages/Blog.html"
+            <a href="./Blog.html"
               class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
           </li>
           <li>
-            <a href="/home/uki/Documents/modules/css_modules/Css final ass/pages/Sing In.html"
+            <a href="./Sing In.html"
               class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Sing
               In</a>
           </li>
           <li>
-            <a href="/home/uki/Documents/modules/css_modules/Css final ass/pages/Sing Up.html"
+            <a href="./Sing Up.html"
               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Sing
               Up</a>
           </li>
