--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -13,7 +13,7 @@
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="/home/uki/Downloads/logo-20250701T085326Z-1-001/logo/code.png" class="h-8" alt="code master Logo" />
+            <img src="../assets/logo/code.png" class="h-8" alt="code master Logo" />
             <span class="self-center text-1xl font-semibold whitespace-nowrap dark:text-white">Code Master</span>
           </a>
     
